src/main/metadata/objects/Charge_Receivable__c.object
<CustomObject>
    <fields>
        <fullName>Charge_Code__c</fullName>
        <label>Charge Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Composite_Charge_Receivable_Identifier__c</fullName>
        <formula>FS_Contract__r.Borrower__r.BPID__c+"-"+ FS_Contract__r.Contract_ID__c+"-"+ Charge_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Composite Charge Receivable Identifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Contract__c</fullName>
        <label>FS Contract</label>
        <referenceTo>FS_Contract__c</referenceTo>
        <relationshipLabel>Charge Receivables</relationshipLabel>
        <relationshipName>Charge_Receivables</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Receivable_Charges__c</fullName>
        <label>Receivable Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Charge Receivable</label>
    <nameField>
        <displayFormat>CR-{000000}</displayFormat>
        <label>Charge Receivable Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Charge Receivables</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>